ui: fix problem search sort bar color in dark mode

--- a/packages/ui-default/theme/dark.styl
+++ b/packages/ui-default/theme/dark.styl
@@ -282,6 +282,10 @@ $hover-background-color = #424242
   .problem__tag-item
     color: #d8dee3
 
+  .search-sort
+    color: #eee!important
+    background-color: #1f1f1f!important
+
   label.textbox.material input
     border-color: #333
     color: #aaa
